07-despliegue-aws/appointment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-app
  template:
    metadata:
      labels:
        app: appointment-app
    spec:
      containers:
        - name: appointment
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/appointment
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3030
            initialDelaySeconds: 3
            periodSeconds: 3
