07-despliegue-aws/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/auth
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3010
            initialDelaySeconds: 3
            periodSeconds: 3
