07-despliegue-aws/helpdesk-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: help-desk-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: help-desk-app
  template:
    metadata:
      labels:
        app: help-desk-app
    spec:
      containers:
        - name: help-desk
          image: 282865065290.dkr.ecr.us-east-1.amazonaws.com/helpdesk
          imagePullPolicy: Always
          ports:
            - containerPort: 3070
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3070
            initialDelaySeconds: 3
            periodSeconds: 3
