07-despliegue-aws/appointment-co-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-co-svc
spec:
  type: ClusterIP
  selector:
    app: appointment-co-app
  ports:
    - port: 80
      targetPort: 3060
      protocol: TCP
