07-despliegue-aws/appointment-mx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-mx-svc
spec:
  type: ClusterIP
  selector:
    app: appointment-mx-app
  ports:
    - port: 80
      targetPort: 3040
      protocol: TCP
