07-despliegue-aws/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-svc
spec:
  type: ClusterIP
  selector:
    app: appointment-app
  ports:
    - port: 80
      targetPort: 3030
      protocol: TCP
