07-despliegue-aws/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: auth-app
  ports:
    - port: 80
      targetPort: 3010
      protocol: TCP
