07-despliegue-aws/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  type: ClusterIP
  selector:
    app: rabbit-app
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: web
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: app
