07-despliegue-aws/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  type: ClusterIP
  selector:
    app: user-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
